[project]
name = "bbrl_cl"
license = {text = "MIT"}
authors = [
    { name = "Olivier Sigaud",  email = "Olivier.Sigaud@isir.upmc.fr" },
    { name = "Ethan Luong",  email = "ethan.luong@isir.upmc.fr" }
]
description = "BBRL for Subspaces of Policies in Continuous Reinforcement Learning"
dynamic = ["version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/bbrl_cl/_version.py"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project.urls]
repository = "https://github.com/Ethan2541/bbrl_cl.git"