[project]
name = "bbrl_subspaces"
license = {text = "MIT"}
authors = [
    { name = "Olivier Sigaud",  email = "Olivier.Sigaud@isir.upmc.fr" },
    { name = "Ethan Luong",  email = "ethan.luong@isir.upmc.fr" }
]
description = "BBRL for Subspaces of Policies in Continuous Reinforcement Learning"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/bbrl_subspaces/_version.py"
fallback_version = "0.0.0-dev"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project.urls]
repository = "https://github.com/Ethan2541/bbrl_subspaces.git"